# whiteboard-typewriter

./: .gitignore  .gitmodules  CharacterCache.py  README.md  charcache_test.py  config.gcode  main.py  serialtest.ino  serialtest.py  tempCodeRunnerFile.py  typedText.txt
GRBL-Arduino-Library/: grblmain.cpp  protocol.cpp
character_segmentation/: RHT.py  RHT_Lines.py  segmentation.py  segmentation_old.py  tempCodeRunnerFile.py
character_segmentation/prototyping/: character_segmentation.py  find_circles.asv  find_circles.m  hough_circles_acc.asv  hough_circles_acc.m  hough_lines_acc.m  (+5 more)
gcode/: arcs.gcode  circles.gcode  circlesquare.gcode  config.gcode  letterl.gcode  sample.gcode  semicircle.gcode  singleline.gcode  square.gcode
pathfinding/: SpaceCadet.py  cp1_demo.py  pathfinding.py  stresstest.py
serialtest/: serialtest.ino
text-rendering/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  glad.c  testGLFW.cpp
text-rendering/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
text-rendering/include/: CMakeLists.txt
text-rendering/include/glad/: glad.h
text-rendering/src/: Makefile  cmake_install.cmake  glad.c  text-rendering.cpp
text-rendering/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
ui/: CleanDirectories.sh  MainWindow.py  Preprocessing.py  TextGrabber.py  Thinning.py
